--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,9 +32,22 @@ services:
 
   client2:
     hostname: client2
+    # image: ftutorials/ubuntu-ssh:1.0
+    build: ./ubuntu-ssh
+    container_name: client2
+    platform: linux/amd64
+    ports:
+      - "2224:22"
+      - "3004:3000"
+      - "8084:80" 
+    networks:
+      - ansible_net
+
+  client3:
+    hostname: client3
     # image: ftutorials/rocky-ssh:1.0
     build: ./rocky-ssh
-    container_name: client2
+    container_name: client3
     platform: linux/amd64
     ports:
       - "2225:22"
@@ -43,6 +56,27 @@ services:
     networks:
       - ansible_net
 
+  client4:
+    hostname: client4
+    # image: ftutorials/rocky-ssh:1.0
+    build: ./rocky-ssh
+    container_name: client4
+    platform: linux/amd64
+    ports:
+      - "2226:22"
+      - "3006:3000"
+      - "8086:80" 
+    networks:
+      - ansible_net
+
+  # quiz-ansible:
+  #   image: ftutorials/quiz:ansible-1
+  #   container_name: quiz-ansible
+  #   platform: linux/amd64
+  #   ports:
+  #     - "3000:3000"
+  #   networks:
+  #     - ansible_net
 
 networks:
   ansible_net:
